--- a/TacticUE/Config/DefaultInput.ini
+++ b/TacticUE/Config/DefaultInput.ini
@@ -77,6 +77,8 @@ DefaultViewportMouseCaptureMode=CapturePermanently_IncludingInitialMouseDown
 DefaultViewportMouseLockMode=LockOnCapture
 FOVScale=0.011110
 DoubleClickTime=0.200000
++ActionMappings=(ActionName="InputAction_RotationRight",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=E)
++ActionMappings=(ActionName="InputAction_RotationLeft",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=A)
 +AxisMappings=(AxisName="InputAxis_Zoom",Scale=-1.000000,Key=MouseWheelAxis)
 +AxisMappings=(AxisName="InputAxis_Forward",Scale=1.000000,Key=Z)
 +AxisMappings=(AxisName="InputAxis_Forward",Scale=-1.000000,Key=S)
@@ -86,8 +88,6 @@ DoubleClickTime=0.200000
 +AxisMappings=(AxisName="InputAxis_Right",Scale=-1.000000,Key=Q)
 +AxisMappings=(AxisName="InputAxis_Right",Scale=1.000000,Key=Right)
 +AxisMappings=(AxisName="InputAxis_Right",Scale=-1.000000,Key=Left)
-+AxisMappings=(AxisName="InputAxis_Rotation_Right",Scale=1.000000,Key=E)
-+AxisMappings=(AxisName="InputAxis_Rotation_Right",Scale=-1.000000,Key=A)
 DefaultPlayerInputClass=/Script/Engine.PlayerInput
 DefaultInputComponentClass=/Script/Engine.InputComponent
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
